prevent to focus textarea/editor/textfield when clicked on mobile, update comment editor styles, accent current target parent comment

--- a/src/assets/common.styl
+++ b/src/assets/common.styl
@@ -54,6 +54,18 @@ td.ellipsis
   border-right:1px solid #e8e8e8
 .wrap
   white-space: normal
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+  select,
+  select:focus,
+  textarea,
+  textarea:focus,
+  input,
+  input:focus,
+  .ql-editor[contenteditable=true],
+  .ql-editor[contenteditable=true]:focus{
+    font-size: 16px
+  }
+}
 //pedagy specific
 .boardTitle
   font-size:16px
